<resources>
    <string name="app_activityName">2.0</string>
    <string name="connect">连接</string>
    <string name="Scan">扫描</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="tagOperation">操作</string>
    <string name="ConfigSetting">配置</string>
    <string name="action_system">系统配置</string>
    <string name="Message">Message</string>
    <string name="systemlayout_textView_system_tv">参数 </string>
    <string name="systemlayout_button_saveparam">保存 </string>
    <string name="systemlayout_button_paramdefault">默认参数</string>
    <string name="indicatorlayout_tv_indicator">天线选择</string>
    <string name="tab1_layout_textView34">电源管理 </string>
    <string name="tab1_layout_textView5">平台选择 </string>
    <string name="tab1_layout_textView35">连接读写器</string>
    <string name="tab1_layout_textView36">串口 </string>
    <string name="tab1_layout_textView2">天线口 </string>
    <string name="tab1_layout_button_connect">连接 </string>
    <string name="tab1_layout_button_disconnect">断开</string>
    <string name="tab2_layout_button_start">开始</string>
    <string name="tab2_layout_button_stop">停止</string>
    <string name="tab2_layout_button_readclear">清除</string>
    <string name="tab2_layout_button_readset">设置 </string>
    <string name="tab2_layout_textView1">本次读到标签个数：</string>
    <string name="tab2_layout_textView2">        共读到标签个数：</string>
    <string name="tab2_layout_textView3">设备状态：</string>
    <string name="connectSec">连接成功</string>
    <string name="connectFalse">连接失败</string>
    <string name="powerUpSec">上电成功</string>
    <string name="powerUpFalse">上电失败</string>
    <string name="tag">块区</string>
    <string name="tag6b">UID</string>
    <string name="hexadecimal">16进制</string>
    <string name="start_address">起始地址</string>
    <string name="tag_count">块数</string>
    <string name="read_operate">读块区操作</string>
    <string name="write_operate">写块区操作</string>
    <string name="lock_operate">锁块区操作</string>
    <string name="lock_type">锁类型</string>
    <string name="selete_antenna">Selete antenna</string>
    <string name="antenna_detecting">天线检测</string>
    <string name="antenna_power">天线功率</string>
    <string name="antenna_detect">检测天线</string>
    <string name="antenna_no_detect">不检测天线</string>
    <string name="antenna1_r">Ate1R</string>
    <string name="antenna2_r">Ate2R</string>
    <string name="antenna3_r">Ate3R</string>
    <string name="antenna4_r">Ate4R</string>
    <string name="antenna1_w">Ate1W</string>
    <string name="antenna2_w">Ate2W</string>
    <string name="antenna3_w">Ate3W</string>
    <string name="antenna4_w">Ate4W</string>
    <string name="antenna1">Antenna1 OutputPower</string>
    <string name="antenna2">Antenna2 OutputPower</string>
    <string name="antenna3">Antenna3 OutputPower</string>
    <string name="antenna4">Antenna4 OutputPower</string>
    <string name="area">区域</string>
    <string name="frequency">频率</string>
    <string name="check_frequency">查看频点</string>
    <string name="set_frequency">设置频点</string>
    <string name="run_time">runTime</string>
    <string name="app_name">菁英盘点</string>
    <string name="date_settings">日期时间设置</string>
    <string name="corp_style">企业类型</string>
    <string name="corp_choice">请选择企业类型</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="go">直接进入</string>
    <string name="resume">重新选择</string>
    <string name="back">返回</string>
    <string name="submit">确认</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="reselect">重选</string>
    <string name="insert_barcode">请输入条码</string>
    <string name="exit">系统退出</string>
    <string name="pass_admin">请输入管理员密码：</string>
    <string name="data_select">请选择更新的基础数据</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">菁英科技，欢迎您！</string>
    <string name="bill_no">单        号:</string>
    <string name="unit">往来单位:</string>
    <string name="med_type">药品类型：</string>
    <string name="scan_num">已扫描：</string>
    <string name="build">新建</string>
    <string name="message">信息</string>
    <string name="communicate">通讯</string>
    <string name="allbill">全部出入库单</string>
    <string name="selelect_ordertype">请选择单据类型</string>
    <string name="selelect_returncause">请选择退货原因</string>
    <string name="selelect_papertype">请选择证件类型</string>
    <string name="query">搜索</string>
    <string name="loading">正在加载数据,请稍候......</string>
    <string name="input_bill_number">请输入单号</string>
    <string name="dialog_title">提示</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_fail">删除失败！</string>
    <string name="setting">设置</string>
    <string name="setting_warehouse">设置商档</string>
    <string name="warehouse_name">商档名称   *:</string>
    <string name="warehouse_address">商档地址   *:</string>
    <string name="warehouse_user">商档联系人:</string>
    <string name="remarks">备注:</string>
    <string name="in_warehouse_remarks_hint">请输入备注</string>
    <string name="in_warehouse_name_hint">请输入商档名称</string>
    <string name="in_warehouse_address_hint">请输入商档地址</string>
    <string name="in_warehouse_user_hint">请输入商档联系人</string>
    <string name="print_name">打印机名称:</string>
    <string name="print_address">蓝牙地址:</string>
    <string name="default_print">黙认打印机</string>
    <string name="upload">上传</string>
    <string name="clear">清除</string>
    <string name="no_choose">没有选择</string>
    <string name="choosed">已经选择</string>
    <string name="cannot_move">不可移动</string>
    <string name="notification">操作提示 </string>
    <string name="test">基础资料中无此条码,是否录入?</string>
    <string name="system_update">系统升级</string>
    <string name="update_setting">升级配置</string>
    <string name="updating">执行更新</string>
    <string name="version">当前版本号</string>
    <string name="update_url">更新URL地址</string>
    <string name="enterprise_id">企业ID</string>
    <string name="update_prompt">更新下载文件前是否提示</string>
    <string name="main_app">主程序</string>
    <string name="main_app_launch">主程序为更新成功后系统启动的应用程序</string>
    <string name="empty_url">更新URL地址不能为空！</string>
    <string name="empty_password_old">旧密码不能为空。</string>
    <string name="empty_password_new">新密码不能为空。</string>
    <string name="password_inconformity">两新密码不一致。</string>
    <string name="empty_password_tips">必须选择密码提示问题。</string>
    <string name="empty_password_answer">密码提示答案不能为空，以便找回答案。</string>
    <string name="assword_modification_success">密码修改成功。</string>
    <string name="assword_modification_fail">密码修改失败。</string>
    <string name="password_old_error">旧密码不正确。</string>
    <string name="main_menu">主菜单</string>
    <string name="document_scan">扫描单据</string>
    <string name="goods_scan">盘点扫描</string>
    <string name="goods_query">单品查询</string>
    <string name="modified_quantity">修改数量</string>
    <string name="summary_statistics">汇总统计</string>
    <string name="query_title">查询</string>
    <string name="query_inventory">盘点查询</string>
    <string name="query_outstock">出库查询</string>
    <string name="query_instock">入库查询</string>
    <string name="scan_sequence_query">扫描顺序查询</string>
    <string name="basic_data_query">基础数据查询</string>
    <string name="inventory_export">数据导出</string>
    <string name="inventory_export2">盘点导出</string>
    <string name="export_inventory">导出数据</string>
    <string name="delete_data">删除数据</string>
    <string name="data_delete">数据删除</string>
    <string name="data_import">数据导入</string>
    <string name="system_settings">系统设置</string>
    <string name="parameter_settings">参数设置</string>
    <string name="other_settings">其他设置</string>
    <string name="field_name_settings">字段名称设置</string>
    <string name="export_import_settings">导入导出</string>
    <string name="system_update_settings">系统升级</string>
    <string name="naming_method_select">命名方式选择</string>
    <string name="export_directory_select">导出目录选择</string>
    <string name="import_file_select">导入文件选择</string>
    <string name="tv_store_in">入库</string>
    <string name="tv_store_out">出库</string>
    <string name="bar_store_in">入库单据</string>
    <string name="tv_store_in_num">已入库数量</string>
    <string name="bar_store_out">出库单据</string>
    <string name="tv_store_out_num">已出库数量</string>
    <string name="instock_no_inventory_data">无入库数据！</string>
    <string name="outstock_no_inventory_data">无出库数据！</string>
    <string name="warning">警告 </string>
    <string name="barCode_not_empty">条码不能为空 !</string>
    <string name="barCode_not_exist">无此条码!</string>
    <string name="no_inventory_data">无盘点数据！</string>
    <string name="no_inventory_detailed_data">无盘点明细数据！</string>
    <string name="no_inventoried_goods">不存在该已盘点货品!</string>
    <string name="enter_password">请输入管理员密码</string>
    <string name="not_modified_empty">不能修改为空</string>
    <string name="error">错误</string>
    <string name="modify">修改</string>
    <string name="file_not_found">未找到数据文件，&#010;请将文件放到指定目录!</string>
    <string name="exit_application">是否退出应用程序？</string>
    <string name="modify_password">修改密码 </string>
    <string name="enter_quantity">输入数量</string>
    <string name="please_enter_quantity">请输入数量</string>
    <string name="modify_quantity">修改数量</string>
    <string name="modify_quantity_after">修改后数量</string>
    <string name="quantity_not_null">数量不能为空!</string>
    <string name="digit_system_one">小数点后位数系统设置为只能输入1位，请输入至多1位。</string>
    <string name="digit_system_two">小数点后位数系统设置为只能输入2位，请输入至多2位。</string>
    <string name="decimal_error">小数输入错误 !</string>
    <string name="quantity_error">数量输入有误，请检查。</string>
    <string name="password_empty">密码不能为空。</string>
    <string name="password_error">密码错误，请重新输入 !</string>
    <string name="enter_administrator">恭喜您启用超级管理员权限成功。\n\n确定后进入系统设置模块。</string>
    <string name="enter_administrator_scan_good">恭喜您启用超级管理员权限成功。</string>
    <string name="is_root_directory">已经是根目录!</string>
    <string name="confirm_again">请再次确认要保存吗？</string>
    <string name="sure_save">请确认是否要保存当前配置并隐藏相关的配置功能？\n请注意：保存配置功能后将不能再行配置,同时保存配置时会删除当前系统的所有盘点数据。</string>
    <string name="scan_settings">扫描设置</string>
    <string name="please_wait">请稍等</string>
    <string name="length_settings">长度设置</string>
    <string name="length_limit_mode">长度限制方式：</string>
    <string name="length_equal">等于限制（为0表示不设置该项）：</string>
    <string name="range_limit">范围限制：</string>
    <string name="small_value">小值:</string>
    <string name="large_value">大值:</string>
    <string name="intercept_save_code">截取或保留条码：</string>
    <string name="reserved_digit">保留位数</string>
    <string name="setting1">设置系统门店编号：</string>
    <string name="setting2">系统客户名称设置：</string>
    <string name="setting3">自动弹出时间设置：</string>
    <string name="setting4">盘点是否关闭WIFI：</string>
    <string name="setting5">删除数据管理单位： </string>
    <string name="setting6">删除数据密码控制：</string>
    <string name="location_tv">货位:</string>
    <string name="barcode_tv">条码:</string>
    <string name="goods_name_tv">名称:</string>
    <string name="goods_name_display">品名</string>
    <string name="specification_tv">规格:</string>
    <string name="price_tv">价格:</string>
    <string name="unit_tv">单位:</string>
    <string name="record_tv">记录:</string>
    <string name="item_tv">品项:</string>
    <string name="stock_tv">库存:</string>
    <string name="quantity_tv">数量:</string>
    <string name="quantity_tv_display">数量</string>
    <string name="default_quantity_tv_display">1</string>
    <string name="serial_number_tv">序号</string>
    <string name="rfid_tv">RFID编号</string>
    <string name="select_all">全选</string>
    <string name="select_item">选择</string>
    <string name="add_warehouse">增加商档</string>
    <string name="update_warehouse">修改商档</string>
    <string name="delete_warehouse">删除商档</string>
    <string name="select_location">请选择货位</string>
    <string name="outstock_display">出库</string>
    <string name="stock_more">更多</string>
    <string name="scan_rfid_display">扫描RFID</string>
</resources>