<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/item_out_stock_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/item_num"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/serial_number_tv"
            android:textColor="#777777"
            android:textSize="@dimen/stock_size" />

        <TextView
            android:id="@+id/item_rfid_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/rfid_tv"
            android:textColor="#777777"
            android:textSize="@dimen/stock_size" />

        <TextView
            android:id="@+id/item_rfid_goods_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/goods_name_display"
            android:textColor="#777777"
            android:textSize="@dimen/stock_size" />

        <EditText
            android:id="@+id/item_goods_count_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:singleLine="true"
            android:inputType="numberSigned"
            android:gravity="center"
            android:hint="@string/quantity_tv_display"
            android:text="@string/default_quantity_tv_display"
            android:textColor="#777777"
            android:imeOptions="actionNone"
            android:textSize="@dimen/stock_size" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/item_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_item"
                android:textColor="#777777"
                android:textSize="@dimen/stock_size" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>